--- a/weak1.html
+++ b/weak1.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="UTF-8" />
-  <title>To-Do List 7 พร้อมติ้ก 3 สถานะ และเพิ่มรูปภาพ (บันทึกอัตโนมัติ)</title>
+  <title>Weak1</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
 
