--- a/weak1.html
+++ b/weak1.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="UTF-8" />
-  <title>Weak1</title>
+  <title>To-Do List 7 พร้อมติ้ก 3 สถานะ และเพิ่มรูปภาพ (บันทึกอัตโนมัติ)</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
 
@@ -384,7 +384,7 @@
 
     // โหลดข้อมูลจาก localStorage
     function loadData() {
-      const dataStr = localStorage.getItem('todoData');
+      const dataStr = localStorage.getItem('weak1');
       if (!dataStr) return null;
       try {
         return JSON.parse(dataStr);
