--- a/weak4.html
+++ b/weak4.html
@@ -384,7 +384,7 @@
 
     // โหลดข้อมูลจาก localStorage
     function loadData() {
-      const dataStr = localStorage.getItem('todoData');
+      const dataStr = localStorage.getItem('weak4');
       if (!dataStr) return null;
       try {
         return JSON.parse(dataStr);
