--- a/weak3.html
+++ b/weak3.html
@@ -395,7 +395,7 @@
 
     // เซฟข้อมูลลง localStorage
     function saveData(data) {
-      localStorage.setItem('todoData', JSON.stringify(data));
+      localStorage.setItem('weak3', JSON.stringify(data));
     }
 
     // แปลงไฟล์รูปภาพเป็น base64 string (async)
