--- a/weak3.html
+++ b/weak3.html
@@ -111,8 +111,8 @@
     }
 
     .checkbox-wrapper[data-state="0"] {
-      background-color: white;
-      border-color: #4a3aff;
+      background-color: #f44336;
+      border-color: #f44336;
     }
     .checkbox-wrapper[data-state="1"] {
       background-color: #4caf50;
